Fix T40756 Select Linked by Particle System matches ignores selected psys.

This is inconsistent with other comparable cases like materials, where
the active slot is used to define matching objects.